apps/apisix-external/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: apisix-external
  labels:
    app.kubernetes.io/name: apisix-external
    app.kubernetes.io/component: edge-gateway
    app.kubernetes.io/part-of: inner-apis
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: apisix-external
  ports:
    - name: http
      port: 9080
      targetPort: http
      protocol: TCP
